@@ -72,7 +72,7 @@ public class ResourceProviderSummaryModeR4Test extends BaseResourceProviderR4Tes
 			.returnBundle(Bundle.class)
 			.execute();
 
-		assertEquals(new Integer(104), outcome.getTotalElement().getValue());
+		assertEquals(Integer.valueOf(104), outcome.getTotalElement().getValue());
 		assertEquals(0, outcome.getEntry().size());
 	}
 
@@ -89,7 +89,7 @@ public class ResourceProviderSummaryModeR4Test extends BaseResourceProviderR4Tes
 			.returnBundle(Bundle.class)
 			.execute();
 
-		assertEquals(new Integer(104), outcome.getTotalElement().getValue());
+		assertEquals(Integer.valueOf(104), outcome.getTotalElement().getValue());
 		assertEquals(10, outcome.getEntry().size());
 	}
 
@@ -107,7 +107,7 @@ public class ResourceProviderSummaryModeR4Test extends BaseResourceProviderR4Tes
 			.returnBundle(Bundle.class)
 			.execute();
 
-		assertEquals(new Integer(104), outcome.getTotalElement().getValue());
+		assertEquals(Integer.valueOf(104), outcome.getTotalElement().getValue());
 		assertEquals(10, outcome.getEntry().size());
 	}
 
@@ -125,7 +125,7 @@ public class ResourceProviderSummaryModeR4Test extends BaseResourceProviderR4Tes
 			.returnBundle(Bundle.class)
 			.execute();
 
-		assertEquals(new Integer(0), outcome.getTotalElement().getValue());
+		assertEquals(Integer.valueOf(0), outcome.getTotalElement().getValue());
 		assertEquals(0, outcome.getEntry().size());
 	}
 
